# TLSE

./: .gitignore  2DataSet.py  CrearDataSet.py  CrearDataSet2.py  Makefile  PM_V1.2.0.py  PM_V1.3.0.py  PM_V1.3.1.py  PM_V1.4.7.py  PM_V5.py  PrediccionModelo V1.1.py  README.md  RecopilacionDATASET.py  data.pickleNew  entrenamientoModelo.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
Entrenar Modelo/: EntrenamientoModelo2.py  EntrenamientoModelo3.py  EntrenamientoModelo4.py  EntrenamientoModelo5.py  entrenamientoModelo.py
Procesamiento del Dataset/: CrearDataSet.py  CrearDataSet2.py  DATASET.py  DATASET2.py
Recopilar Fotos/: 2DataSet.py  DATASET-A.py  RecopilacionDATASET.py
Versiones 1/Pruebas/: IntentoDeteccionLSTM.py  PruebaLSTM1.py  PruebasPM_V1.py  videos.py
Versiones 1/V1.1/: PrediccionModelo V1.1.py
Versiones 1/V1.2/: PM_V1.2.0.py
Versiones 1/V1.3/: PM_V1.3.0.py  PM_V1.3.1.py
Versiones 1/V1.4/: PM_V1.4.0.py  PM_V1.4.1.py  PM_V1.4.2.py  PM_V1.4.3.py  PM_V1.4.4.py  PM_V1.4.5.py  PM_V1.4.6-presentacio.py  PM_V1.4.6.py  PM_V1.4.7.py  PM_V1.4.8.py  PM_V1.4.9.py
Versiones 1/V1.5/: PM_V5.py
Versiones 2/Entrenar Modelo/: EntrenamientoModeloV2.py  EntrenamientoTranslación_V2.py  HacerVideos_NO_Usar.py  ProcesamientoDataset.py  RecopilacionVideos2.py
demo/sample_data/: landmarks_demo.pickle
docs/: architecture.md  dataset-card.md  desktop-tauri.md  limitations.md  model-card.md  product-vision.md  ui-guidelines.md
scripts/: __init__.py  benchmark_models.py  evaluate_demo.py  evaluate_legacy.py  evaluate_model.py  evaluate_real.py  make_demo_dataset.py
src/tlse/: __init__.py  __main__.py  benchmark.py  capture.py  cli.py  demo.py  evaluate.py  features.py  preprocess.py  train.py  (+1 more)
tests/: test_api.py  test_demo_training.py
tlse/: __init__.py
(+5 files in other folders)
