[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlse"
version = "0.1.0"
description = "Static sign and gesture alphabet recognizer experiments for webcam input."
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "opencv-python~=4.9",
    "mediapipe~=0.10",
    "numpy~=1.26",
    "scikit-learn~=1.4",
    "pyttsx3~=2.90",
    "tqdm~=4.66",
    "pynput~=1.7",
]

[project.scripts]
tlse-capture = "tlse.capture:main"
tlse-preprocess = "tlse.preprocess:main"
tlse-train = "tlse.train:main"
tlse-realtime = "tlse.realtime:main"
tlse-make-demo-dataset = "tlse.demo:main"

[tool.setuptools.packages.find]
where = ["src"]
