[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlse"
version = "0.1.0"
description = "Static sign and gesture alphabet recognizer experiments for webcam input."
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi~=0.115",
    "opencv-python~=4.9",
    "mediapipe~=0.10",
    "numpy~=1.26",
    "pydantic~=2.8",
    "scikit-learn~=1.4",
    "pyttsx3~=2.90",
    "tqdm~=4.66",
    "pynput~=1.7",
    "uvicorn[standard]~=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx~=0.27",
    "pytest~=8.2",
]

[project.scripts]
tlse = "tlse.cli:main"
tlse-capture = "tlse.capture:main"
tlse-preprocess = "tlse.preprocess:main"
tlse-train = "tlse.train:main"
tlse-realtime = "tlse.realtime:main"
tlse-make-demo-dataset = "tlse.demo:main"
tlse-evaluate = "tlse.evaluate:main"
tlse-benchmark = "tlse.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tlse*"]
